src/test/ui/impl-trait/issues/universal-turbofish-in-method-issue-50950.stderr
error[E0632]: cannot provide explicit generic arguments when `impl Trait` is used in argument position
  --> $DIR/universal-turbofish-in-method-issue-50950.rs:14:24
   |
LL |     evt.handle_event::<TestEvent, fn(TestEvent)>(|_evt| {
   |                        ^^^^^^^^^  ^^^^^^^^^^^^^ explicit generic argument not allowed
   |                        |
   |                        explicit generic argument not allowed
   |
   = note: see issue #83701 <https://github.com/rust-lang/rust/issues/83701> for more information
   = help: add `#![feature(explicit_generic_args_with_impl_trait)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0632`.
